// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/requests DELETE / /:requestId - delete a request 1`] = `
Object {
  "entities": Object {},
}
`;

exports[`/api/requests GET / get all requests 1`] = `
Object {
  "entities": Object {
    "requests": Object {
      "272d86fc-f743-4cd6-b0c8-7906959bcc9f": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "appointmentId": null,
        "chairId": "24d4e661-1455-4494-8fdb-c4ec0ddf804d",
        "endDate": "2017-07-19T00:17:30.932Z",
        "id": "272d86fc-f743-4cd6-b0c8-7906959bcc9f",
        "insuranceCarrier": null,
        "insuranceMemberId": null,
        "isCancelled": false,
        "isConfirmed": false,
        "isDeleted": false,
        "isSyncedWithPms": false,
        "note": "a standard note",
        "patientId": null,
        "patientUserId": "b8665c97-1e98-41ac-bf13-090b742de400",
        "pmsId": null,
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "requestingPatientUserId": "b8665c97-1e98-41ac-bf13-090b742de400",
        "sentRecallId": null,
        "serviceId": "c5beec65-73a0-4b58-ba48-65986931d054",
        "startDate": "2017-07-19T00:16:30.932Z",
        "suggestedChairId": "24d4e661-1455-4494-8fdb-c4ec0ddf804d",
        "suggestedPractitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
      },
    },
  },
  "result": Array [
    "272d86fc-f743-4cd6-b0c8-7906959bcc9f",
  ],
}
`;

exports[`/api/requests GET / get all requests with patientUsers and services 1`] = `
Object {
  "entities": Object {
    "patientUsers": Object {
      "b8665c97-1e98-41ac-bf13-090b742de400": Object {
        "birthDate": null,
        "email": "testpatientuser@test.com",
        "firstName": "Jack",
        "gender": null,
        "id": "b8665c97-1e98-41ac-bf13-090b742de400",
        "insuranceCarrier": null,
        "insuranceGroupId": null,
        "insuranceMemberId": null,
        "isEmailConfirmed": false,
        "isPhoneNumberConfirmed": false,
        "lastName": "Daniels",
        "patientUserFamilyId": null,
        "phoneNumber": "+16049999999",
      },
    },
    "requests": Object {
      "272d86fc-f743-4cd6-b0c8-7906959bcc9f": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "appointmentId": null,
        "chairId": "24d4e661-1455-4494-8fdb-c4ec0ddf804d",
        "endDate": "2017-07-19T00:17:30.932Z",
        "id": "272d86fc-f743-4cd6-b0c8-7906959bcc9f",
        "insuranceCarrier": null,
        "insuranceMemberId": null,
        "isCancelled": false,
        "isConfirmed": false,
        "isDeleted": false,
        "isSyncedWithPms": false,
        "note": "a standard note",
        "patientId": null,
        "patientUser": "b8665c97-1e98-41ac-bf13-090b742de400",
        "pmsId": null,
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "requestingPatientUserId": "b8665c97-1e98-41ac-bf13-090b742de400",
        "sentRecallId": null,
        "service": "c5beec65-73a0-4b58-ba48-65986931d054",
        "serviceId": "c5beec65-73a0-4b58-ba48-65986931d054",
        "startDate": "2017-07-19T00:16:30.932Z",
        "suggestedChairId": "24d4e661-1455-4494-8fdb-c4ec0ddf804d",
        "suggestedPractitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
      },
    },
    "services": Object {
      "c5beec65-73a0-4b58-ba48-65986931d054": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "bufferTime": null,
        "duration": 4,
        "id": "c5beec65-73a0-4b58-ba48-65986931d054",
        "isDefault": false,
        "isHidden": false,
        "name": "Test Service",
        "pmsId": null,
        "unitCost": null,
      },
    },
  },
  "result": Array [
    "272d86fc-f743-4cd6-b0c8-7906959bcc9f",
  ],
}
`;

exports[`/api/requests GET / get all unSynced requests with patientUsers 1`] = `
Object {
  "data": Array [
    Object {
      "attributes": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "endDate": "2017-07-19T00:17:30.932Z",
        "formattedNote": "Date Requested: July 18th, 2017 in America/Vancouver
Patient Name: Jack Daniels
Reason for Booking: Test Service
Preferred Practitioner: Colonel Sanders
Email: testpatientuser@test.com
Phone: +16049999999
Note: a standard note
Requested By: self",
        "insuranceCarrier": null,
        "insuranceMemberId": null,
        "isDeleted": false,
        "note": "a standard note",
        "patientId": null,
        "pmsId": null,
        "startDate": "2017-07-19T00:16:30.932Z",
        "suggestedChairId": "24d4e661-1455-4494-8fdb-c4ec0ddf804d",
        "suggestedPractitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
      },
      "id": "272d86fc-f743-4cd6-b0c8-7906959bcc9f",
      "type": "appointmentRequest",
    },
  ],
}
`;

exports[`/api/requests POST / create request 1`] = `
Object {
  "entities": Object {
    "requests": Object {
      "272d86fc-f743-4cd6-b0c8-7906959bcc9f": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "appointmentId": null,
        "chairId": "24d4e661-1455-4494-8fdb-c4ec0ddf804d",
        "endDate": "2017-07-19T00:17:30.932Z",
        "id": "272d86fc-f743-4cd6-b0c8-7906959bcc9f",
        "insuranceCarrier": null,
        "insuranceMemberId": null,
        "isCancelled": false,
        "isConfirmed": false,
        "isSyncedWithPms": false,
        "note": "a standard note",
        "patientId": null,
        "patientUserId": "b8665c97-1e98-41ac-bf13-090b742de400",
        "pmsId": null,
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "requestingPatientUserId": "b8665c97-1e98-41ac-bf13-090b742de400",
        "sentRecallId": null,
        "serviceId": "c5beec65-73a0-4b58-ba48-65986931d054",
        "startDate": "2017-07-19T00:16:30.932Z",
        "suggestedChairId": "24d4e661-1455-4494-8fdb-c4ec0ddf804d",
        "suggestedPractitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
      },
    },
  },
  "result": "272d86fc-f743-4cd6-b0c8-7906959bcc9f",
}
`;

exports[`/api/requests PUT / /:requestId - reject request 1`] = `
Object {
  "entities": Object {
    "requests": Object {
      "272d86fc-f743-4cd6-b0c8-7906959bcc9f": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "appointmentId": null,
        "chairId": "24d4e661-1455-4494-8fdb-c4ec0ddf804d",
        "endDate": "2017-07-19T00:17:30.932Z",
        "id": "272d86fc-f743-4cd6-b0c8-7906959bcc9f",
        "insuranceCarrier": null,
        "insuranceMemberId": null,
        "isCancelled": true,
        "isConfirmed": false,
        "isSyncedWithPms": false,
        "note": "a standard note",
        "patientId": null,
        "patientUserId": "b8665c97-1e98-41ac-bf13-090b742de400",
        "pmsId": null,
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "requestingPatientUserId": "b8665c97-1e98-41ac-bf13-090b742de400",
        "sentRecallId": null,
        "serviceId": "c5beec65-73a0-4b58-ba48-65986931d054",
        "startDate": "2017-07-19T00:16:30.932Z",
        "suggestedChairId": "24d4e661-1455-4494-8fdb-c4ec0ddf804d",
        "suggestedPractitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
      },
    },
  },
  "result": "272d86fc-f743-4cd6-b0c8-7906959bcc9f",
}
`;

exports[`/api/requests PUT / /:requestId - update request 1`] = `
Object {
  "entities": Object {
    "requests": Object {
      "272d86fc-f743-4cd6-b0c8-7906959bcc9f": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "appointmentId": null,
        "chairId": "24d4e661-1455-4494-8fdb-c4ec0ddf804d",
        "endDate": "2017-07-19T00:18:30.932Z",
        "id": "272d86fc-f743-4cd6-b0c8-7906959bcc9f",
        "insuranceCarrier": null,
        "insuranceMemberId": null,
        "isCancelled": false,
        "isConfirmed": false,
        "isSyncedWithPms": false,
        "note": "a standard note",
        "patientId": null,
        "patientUserId": "b8665c97-1e98-41ac-bf13-090b742de400",
        "pmsId": null,
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "requestingPatientUserId": "b8665c97-1e98-41ac-bf13-090b742de400",
        "sentRecallId": null,
        "serviceId": "c5beec65-73a0-4b58-ba48-65986931d054",
        "startDate": "2017-07-19T00:16:30.932Z",
        "suggestedChairId": "24d4e661-1455-4494-8fdb-c4ec0ddf804d",
        "suggestedPractitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
      },
    },
  },
  "result": "272d86fc-f743-4cd6-b0c8-7906959bcc9f",
}
`;

exports[`/api/requests PUT / /:requestId/confirm/:appointmentId - send confirmed request email 1`] = `
Object {
  "entities": Object {},
}
`;
